# ChangeLog for dev-lang/python
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.461 2010/03/21 12:42:25 arfrever Exp $

*python-2.6.5 (21 Mar 2010)

  21 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +python-2.6.5.ebuild:
  Version bump. Fixed bugs: #189283, #279234, #282859, #300961, #301848.
  Respect GENTOO_PYTHON_PROCESS_NAME, GENTOO_PYTHON_WRAPPER_SCRIPT_PATH and
  GENTOO_PYTHON_TARGET_SCRIPT_PATH environmental variables.

  20 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-2.4.6.ebuild, python-2.5.4-r4.ebuild, python-2.6.4-r1.ebuild,
  python-3.1.1-r1.ebuild:
  Use -fwrapv (bug #297276). Install email module with USE="build".

  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> python-2.6.4-r1.ebuild:
  Marked ppc/ppc64 stable for bug #306793.

  07 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  python-2.6.4-r1.ebuild:
  amd64 stable wrt #306793

  07 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-2.4.6.ebuild, python-2.5.4-r4.ebuild, python-2.6.4.ebuild,
  python-2.6.4-r1.ebuild:
  Delete no longer needed recommendation (bug #307887).

  04 Mar 2010; Raúl Porcel <armin76@gentoo.org> python-2.6.4-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #306793

  04 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-3.1.1-r1.ebuild:
  Depend on >=app-admin/python-updater-0.8, which supports packages
  installable for multiple versions of Python.

  26 Feb 2010; Jeroen Roovers <jer@gentoo.org> python-2.6.4-r1.ebuild:
  Stable for HPPA (bug #306793).

  25 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  python-2.6.4-r1.ebuild:
  stable x86, bug 306793

  21 Feb 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-2.4.6.ebuild, python-2.5.4-r4.ebuild, python-2.6.4-r1.ebuild,
  python-3.1.1-r1.ebuild: